force-app/main/default/objects/Case_Triage__c/Case_Triage__c.object-meta.xml
<CustomObject>
    <label>Case Triage</label>
    <nameField>
        <displayFormat>CT-{0000}</displayFormat>
        <label>Case Triage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Triages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>