force-app/main/default/objects/Case_Triage__c/fields/AI_Draft_Reply__c.field-meta.xml
<CustomField>
    <fullName>AI_Draft_Reply__c</fullName>
    <label>AI Draft Reply</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>