force-app/main/default/objects/Case_Triage__c/fields/Data_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Data_Snapshot__c</fullName>
    <label>Data Snapshot</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>