force-app/main/default/objects/Case_Triage__c/fields/Priority_Band__c.field-meta.xml
<CustomField>
    <fullName>Priority_Band__c</fullName>
    <label>Priority Band</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>