force-app/main/default/objects/Case_Triage__c/fields/Recommendation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Reason__c</fullName>
    <label>Recommendation Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>