force-app/main/default/objects/Case_Triage__c/fields/Recommended_Routing__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Routing__c</fullName>
    <label>Recommended Routing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>L1 Support</fullName>
            </value>
            <value>
                <fullName>L2 Support</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Customer Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>