force-app/main/default/objects/Case_Triage__c/fields/Triage_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Triage_Timestamp__c</fullName>
    <label>Triage Timestamp</label>
    <type>DateTime</type>
</CustomField>